fixed spacing and footer

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
       <a href="about.html">
         <img 
           src="musi.png" 
-          class="hover-image md:h-40 lg:h-64 w-auto" 
+          class="hover-image max-h-48 md:h-36 lg:h-64 w-auto" 
           alt="Music Icon"
         >
       </a>
@@ -52,8 +52,8 @@
 
 
 
-  <section class=" md:pt-16 pb-16">
-    <div class="pb-8 flex flex-col md:flex-row md:pr-16 gap-y-8 px-4 gap-12 md:px-0">
+  <section class=" md:pt-16 sm:pb-16">
+    <div class="flex flex-col md:flex-row md:pr-16 gap-y-8 px-4 gap-12 md:px-0">
       <div class="pb-2 w-full md:w-28 rounded-full rounded-tl-none h-12 md:h-16 flex items-center justify-center md:sticky top-0 bg-[#4866CC] grow-0 border">
         <h3 class="text-white text-center ">uxui</h3>
       </div>
@@ -73,10 +73,10 @@
 
 
 
-<section class="py-8 md:py-12 md:px-16 flex flex-col px-4 gap-0 md-gap-3 border-y border-grey">
+<section class="py-8 md:py-20 md:px-16 flex flex-col px-4 gap-0 md-gap-3 border-y border-grey">
   <h3>Recognition</h3>
   <div class="flex flex-col md:flex-row border-b border-grey py-10 justify-between gap-4">
-    <div class="details flex flex-col flex-1">
+    <div class="details flex flex-col flex-1 gap-2 md:gap-4">
       <p>RGD STUDENT AWARDS x 2</p>
       <h4>1st Place Tie-Winner in Forbes UX Design & Honourable Mention in Augmented Creativity</h4>
     </div>
@@ -84,7 +84,7 @@
   </div>
 
   <div class="flex flex-col md:flex-row border-b border-grey py-10 justify-between gap-4">
-    <div class="details flex flex-col flex-1">
+    <div class="details flex flex-col flex-1 gap-2 md:gap-4">
       <p>DUBSTECH & DESIGN BUDDIES PROTOTHON</p>
       <h4>3rd Place Winner in the UX Gaming Track</h4>
     </div>
@@ -92,7 +92,7 @@
   </div>
 
   <div class="flex flex-col md:flex-row py-10 justify-between gap-4">
-    <div class="details flex flex-col flex-1">
+    <div class="details flex flex-col flex-1 gap-2 md:gap-4">
       <p>DSA WINTER DESN'ATHON @ YORK UNIVERSITY x 2</p>
       <h4>2nd Place Winner in designing a mobile for Student Empowerment & Sustainability</h4>
     </div>
@@ -100,29 +100,24 @@
   </div>
 
 </section>
-<section class="px-4 py-4 md:px-16 flex flex-col justify-center items-center md:items-start gap-3 bg-gray-950 text-white">
-  <div class="flex text-nowrap gap-2">
-    <p>This website was designed and coded by me</p> 
-    <p class="hidden sm:block sm:visible">⁽⁽◝( • ω • )◜⁾⁾</p>
-  </div>
-</section>
+
 
       <section class="flex flex-col md:flex-row pt-8 md:pt-12 md:pb-6 gap-6 flex-1">
-        <div class="flex flex-col gap-4 md:gap-8 px-4 md:px-16">
+        <div class="flex flex-col gap-4 md:gap-8 px-4 md:px-16 sm:pt-10">
             <h3>Let's Chat</h3>
             <h4>See something that caught your eye? I’d be happy to collaborate and discuss new opportunities together</h4>
         </div>
         <div class="w-full">
 
           <a href="https://drive.google.com/file/d/15Vbiz09x6SVD2cTScr3ldKVGAPqeNlPY/view?usp=sharing" target="_blank">
-            <div class="border-b border-grey p-4 pr-3 md:pr-12 flex items-center justify-between hover:text-blob duration-500 cursor-pointer hover-image">
+            <div class="border-b border-grey p-4 pr-3 py-8 md:pr-12 flex items-center justify-between hover:text-blob duration-500 cursor-pointer hover-image">
               <h6>Resume</h6>
               <span class="material-symbols-outlined text-xl"><h2 class="font-thin">trending_flat</h2></span>
             </div>
           </a>
 
           <a href="about.html">
-            <div class="border-b border-grey p-4 pr-3 md:pr-12 flex items-center justify-between hover:text-blob duration-500 cursor-pointer hover-image">
+            <div class="border-b border-grey p-4 pr-3 py-8 md:pr-12 flex items-center justify-between hover:text-blob duration-500 cursor-pointer hover-image">
               <h6>About</h6>
               <span class="material-symbols-outlined text-xl"><h2 class="font-thin">trending_flat</h2></span>
               <span class="cursor-text">About me</span>
@@ -132,7 +127,7 @@
           <!-- Add the hover-image class to other elements as well -->
 
           <a href="archive.html">
-            <div class="p-4 pr-3 md:pr-12 flex items-center justify-between hover:text-blob duration-500 cursor-pointer hover-image">
+            <div class="p-4 pr-3 py-8 md:pr-12 flex items-center justify-between hover:text-blob duration-500 cursor-pointer hover-image">
               <h6>Archive</h6>
               <span class="material-symbols-outlined text-xl"><h2 class="font-thin">trending_flat</h2></span>
             </div>
