fixed arrow and footer compon.

--- a/src/about.html
+++ b/src/about.html
@@ -38,12 +38,11 @@
       <div>
         <h3 class="pb-4">Nice to meet you!</h3>
         <h4 class="md:max-w-[600px] lg:max-w-[800px]">
-          I’m Nina Le (She/Her), a uxui designer and third-year design student at York University's Honours Bachelor of Design program 𖹭 
-          I’m passionate about creating thoughtful, inclusive solutions that optimize feasibility, viability, and desirability for current or future features. 
-          Whether working on uxui or experimental projects, I love diving into research and collaborating with cross-functional teams to craft experiences that cater to the user.
+          I’m Nina Le (She/Her), a uxui designer and third-year design student at York University's Honours Bachelor of Design program. 
+          Whether I am working on uxui or experimental projects, I love diving into new challenges and designing thoughtful experiences.
           <br><br>
-          My attention to detail—shaped by years practicing music and illustration—fuels my approach to design. 
-          Combined with my industry experience, this foundation drives my focus on accessibility, precision, and creating work that feels impactful.
+          Before design, I spent years honing my skills in drawing and singing. Both illustration and choir required rhythm and a sense of flow, which taught me the importance of seamless execution, aka “pixel-perfect execution,” and in enjoying the process :)
+
         </h4>
       </div>
       <a href="https://drive.google.com/file/d/15Vbiz09x6SVD2cTScr3ldKVGAPqeNlPY/view?usp=sharing" target="_blank" class="hover-image">
