changes which ngl i forgot what i changed

--- a/src/about.html
+++ b/src/about.html
@@ -8,9 +8,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
         <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300..900&family=Syne:wght@400..800&display=swap" rel="stylesheet">
 
-
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
         <title>Nina's Portfoilo</title>
     </head>
 <body>
@@ -25,22 +23,20 @@
 </div>
 <div class="cursor-follower"></div>
 
-  <section class="flex flex-col lg:flex-row py-8 md:py-20 px-4 md:px-16 gap-8 md:gap-16 items-center pt-24 md:pt-40">
+  <section class="flex flex-col md:flex-row py-8 md:py-20 px-4 md:px-16 gap-8 md:gap-16 items-center pt-20 md:pt-36 lg:pt-48">
     <!-- Right Image Section -->
-    <div class="flex-auto w-full lg:w-auto">
+    <div class="flex-auto w-full">
       <img src="profile.jpg" 
            alt="Profile picture of Nina Le" 
-           class="rounded-2xl w-full h-[400px] lg:h-auto lg:w-full object-cover">
+           class="rounded-3xl w-full h-1/2 sm:h-full lg:w-full lg:h-[524px] 2xl:h-[740px] object-cover object-center">
     </div>
-    
     <!-- Left Content Section -->
-    <div class="flex flex-col gap-8 md:w-full">
+    <div class="flex flex-col gap-8 xl:gap-14 md:w-full">
       <div>
         <h3 class="pb-4">Nice to meet you!</h3>
-        <h4 class="md:max-w-[600px] lg:max-w-[800px]">
+        <h4>
           I’m Nina Le (She/Her), a uxui designer and third-year design student at York University's Honours Bachelor of Design program. 
           Whether I am working on uxui or experimental projects, I love diving into new challenges and designing thoughtful experiences.
-          <br><br>
           Before design, I spent years honing my skills in drawing and singing. Both illustration and choir required rhythm and a sense of flow, which taught me the importance of seamless execution, aka “pixel-perfect execution,” and in enjoying the process :)
 
         </h4>
@@ -51,6 +47,8 @@
         </button>
       </a>
     </div>
+
+    
   </section>
 
 
