--- a/src/index.html
+++ b/src/index.html
@@ -23,12 +23,12 @@
   <span class="cursor-text"></span>
 </div>
 <div class="cursor-follower"></div>
-<section class="px-4 md:px-16 pb-8 sm:0">
-  <div class="flex flex-col md:flex-row w-full justify-between pt-24 md:pt-48 justify-end md:items-end gap-3">
+<section class="px-4 md:px-16 2xl:px-24 pb-8 lg:pb-24 2xl:pb-32 sm:0">
+  <div class="flex flex-col md:flex-row w-full justify-between pt-24 md:pt-60 2xl:pt-64 justify-end md:items-end gap-3">
 
     <!-- Text content -->
     <div class="flex flex-col flex-1 gap-6 md:gap-8">
-      <h5 class="font-light text-[60px] md:text-[72px] typing">Hi, I'm Nina</h5>
+      <h5 class="font-light text-[60px] md:text-[72px]">Hi, I'm Nina</h5>
       <h4 class="smolwidth">As a UX/UI designer, I look for ways to make things just right while aligning design with real-world needs</h4>
       <h6 class="smolwidth">* When I'm not designing, I'm inspired by music, fashion, and the world around me „• ֊ •„</h6>
     </div>
@@ -36,7 +36,7 @@
       <a href="about.html">
         <img 
           src="musi.png" 
-          class="hover-image max-h-48 md:h-36 lg:h-64 w-auto" 
+          class="hover-image md:h-36 lg:h-48 xl:h-56 w-auto" 
           alt="Music Icon"
         >
       </a>
@@ -53,14 +53,14 @@
 
 
   <section class=" md:pt-16 sm:pb-16">
-    <div class="flex flex-col md:flex-row md:pr-16 gap-y-8 px-4 gap-12 md:px-0">
+    <div class="flex flex-col md:flex-row md:pr-16 2xl:pr-24 gap-y-8 px-4 gap-12 md:px-0">
       <div class="pb-2 w-full md:w-28 rounded-full rounded-tl-none h-12 md:h-16 flex items-center justify-center md:sticky top-0 bg-[#4866CC] grow-0 border">
         <h3 class="text-white text-center ">uxui</h3>
       </div>
-      <div class="grid grid-cols-none md:grid-cols-2 flex-1 gap-4 cards-section"></div>
+      <div class="grid grid-cols-none md:grid-cols-2 flex-1 gap-4 2xl:gap-12 cards-section"></div>
     </div>
     
-    <div class="pb-8 flex flex-col md:flex-row md:pr-16 md:gap-y-8 px-4 gap-12 md:px-0">
+    <div class="pb-8 flex flex-col md:flex-row md:pr-16 md:gap-y-8 px-4 gap-12 md:px-0 2xl:gap-12 2xl:pr-24">
       <div class="pb-2 w-full md:w-28 rounded-full rounded-tl-none h-12 md:h-16 flex items-center justify-center md:sticky top-0 bg-[#13A368] grow-0">
         <h3 class="text-white text-center">motion</h3>
       </div>
