--- a/src/accessichat.html
+++ b/src/accessichat.html
@@ -25,7 +25,7 @@
 <!-- Content Section -->
 <main>
   
-  <div class="relative py-60 lg:pb-72 pt-20 md:pt-32 flex flex-col gap-8 px-4 md:px-10 overflow-hidden">
+  <div class="relative py-60 lg:pb-72 2xl:pb-[560px] pt-20 md:pt-32 flex flex-col gap-8 px-4 md:px-10 overflow-hidden">
     <!-- Image with adjusted positioning -->
     <img src="accesi-hero.png" alt="Hero image" class="absolute top-12 lg:top-4 left-0 w-full h-full object-cover object-top">
     
