--- a/src/hereafter.html
+++ b/src/hereafter.html
@@ -27,7 +27,7 @@
 
   <!-- Header Component -->
   <header-component></header-component>
-  <div class="relative z-0 py-60 lg:pb-60 pt-20 md:pt-32 flex flex-col gap-8 px-4 md:px-10 overflow-hidden">
+  <div class="relative z-0 py-60 lg:pb-60 2xl:pb-[560px] pt-20 md:pt-32 flex flex-col gap-8 px-4 md:px-10 overflow-hidden">
     <!-- Hero image with absolute positioning, behind the content -->
     <img src="hereafter-hero.png" alt="Hero image" class="absolute z-0 top-6 left-0 w-full h-full object-cover">
     
