--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
   <span class="cursor-text"></span>
 </div>
 <div class="cursor-follower"></div>
-<section class="px-4 md:px-16 2xl:px-24 pb-8 lg:pb-24 2xl:pb-32 sm:0">
+<section class="px-4 md:px-16 2xl:px-20 pb-8 lg:pb-24 sm:0">
   <div class="flex flex-col md:flex-row w-full justify-between pt-24 md:pt-60 2xl:pt-64 justify-end md:items-end gap-3">
 
     <!-- Text content -->
@@ -64,7 +64,7 @@
       <div class="pb-2 w-full md:w-28 rounded-full rounded-tl-none h-12 md:h-16 flex items-center justify-center md:sticky top-0 bg-[#13A368] grow-0">
         <h3 class="text-white text-center">motion</h3>
       </div>
-      <div class="grid grid-cols-1 md:grid-cols-2 flex-1 gap-4 cards-section3"></div>
+      <div class="grid grid-cols-1 md:grid-cols-2 flex-1 gap-4 2xl:gap-12  cards-section3"></div>
     </div>
    
 
@@ -72,38 +72,46 @@
 
 
 
-
-<section class="py-8 md:py-20 md:px-16 flex flex-col px-4 gap-0 md-gap-3 border-y border-grey">
+<section class="py-8 md:py-20 md:px-16 flex flex-col px-4 gap-8 md-gap-3 border-y border-grey 2xl:px-20">
   <h3>Recognition</h3>
-  <div class="flex flex-col md:flex-row border-b border-grey py-10 justify-between gap-4">
-    <div class="details flex flex-col flex-1 gap-2 md:gap-4">
-      <p>RGD STUDENT AWARDS x 2</p>
-      <h4>1st Place Tie-Winner in Forbes UX Design & Honourable Mention in Augmented Creativity</h4>
-    </div>
-    <p>2023–2024</p>
-  </div>
 
-  <div class="flex flex-col md:flex-row border-b border-grey py-10 justify-between gap-4">
-    <div class="details flex flex-col flex-1 gap-2 md:gap-4">
-      <p>DUBSTECH & DESIGN BUDDIES PROTOTHON</p>
-      <h4>3rd Place Winner in the UX Gaming Track</h4>
+  <div class="flex md:flex-row flex-col w-full gap-8 2xl:gap-12">
+    <div class="flex-grow flex flex-col gap-8 md:w-1/3">
+      <div class="flex justify-center items-center 2xl:p-16 rounded-xl h-60 bg-[#FFFFFF] overflow-hidden">
+        <img src="rgd.png" class="w-4/6 h-auto">
+      </div>
+      <div class="flex flex-col gap-4">
+        <p class="pb-2 border-b border-grey">RGD STUDENT AWARDS x2</p>
+        <h6 class="pb-4 border-b border-grey">[1] 1st Place, UX Design [2] Honourable Mention, Augmented Creativity</h6>  
+      </div>
     </div>
-    <p>2024</p>
-  </div>
 
-  <div class="flex flex-col md:flex-row py-10 justify-between gap-4">
-    <div class="details flex flex-col flex-1 gap-2 md:gap-4">
-      <p>DSA WINTER DESN'ATHON @ YORK UNIVERSITY x 2</p>
-      <h4>2nd Place Winner in designing a mobile for Student Empowerment & Sustainability</h4>
+    <div class="flex-grow flex flex-col gap-8 md:w-1/3">
+      <div class="flex justify-center items-center 2xl:p-16 rounded-xl h-60 bg-[#FFFFFF] overflow-hidden ">
+        <img src="dubstech.png" class="w-4/6 h-auto">
+      </div>
+      <div class="flex flex-col gap-4">
+        <p class="pb-2 border-b border-grey">DUBSTECH</p>
+        <h6 class="pb-4 border-b border-grey">[3] 3rd Place, Gaming Track - UXD Spring Hackathon</h6>
+      </div>
     </div>
-    <p>2022–2023</p>
-  </div>
 
+    <div class="flex-grow flex flex-col gap-8 md:w-1/3">
+      <div class="flex justify-center items-center 2xl:p-16 rounded-xl h-60 bg-[#FFFFFF] overflow-hidden ">
+        <img src="dsa.png" class="w-2/6 h-auto">
+      </div>
+      <div class="flex flex-col gap-4">
+        <p class="pb-2 border-b border-grey">DSA DESN'ATHON x2</p>
+      <h6 class="pb-4 border-b border-grey">[4] 2nd Place, Student Leadership [5] Sustainability</h6>
+      </div>
+    </div>
+  </div>
 </section>
 
 
+
       <section class="flex flex-col md:flex-row pt-8 md:pt-12 md:pb-6 gap-6 flex-1">
-        <div class="flex flex-col gap-4 md:gap-8 px-4 md:px-16 sm:pt-10">
+        <div class="flex flex-col gap-4 md:gap-8 px-4 md:px-16 2xl:px-20 sm:pt-10">
             <h3>Let's Chat</h3>
             <h4>See something that caught your eye? I’d be happy to collaborate and discuss new opportunities together</h4>
         </div>
