--- a/src/archive.html
+++ b/src/archive.html
@@ -30,7 +30,7 @@
       </section>
   
       <!-- Second Column -->
-      <section class="px-4 md:px-32 flex flex-col md:flex-row gap-8 md:gap-12 justify-center items-center py-8 overflow-hidden">
+      <section class="px-4 md:px-32 flex flex-col md:flex-row gap-8 md:gap-12 justify-center items-center py-8 overflow-hidden ">
 
         <!-- Wrapper for the first image -->
         <div class="flex-shrink-0 w-full md:w-1/3">
@@ -52,7 +52,7 @@
       
 
 
-      <div class="pb-8 flex flex-col md:flex-row md:pr-16 md:gap-y-8 px-4 gap-12 md:px-0 2xl:gap-12 2xl:pr-24">
+      <div class="pb-8 flex flex-col md:flex-row md:pr-16 md:gap-y-8 px-4 gap-12 md:px-0 2xl:gap-12 2xl:pr-24 border-b border-grey">
         <div class="pb-2 w-full md:w-28 rounded-full rounded-tl-none h-12 md:h-16 flex items-center justify-center md:sticky top-0 bg-[#f30559] grow-0">
           <h3 class="text-white text-center">design</h3>
         </div>
