--- a/src/index.html
+++ b/src/index.html
@@ -51,8 +51,7 @@
 
 
 
-
-  <section class=" md:pt-16 sm:pb-16">
+  <section class=" md:pt-16 sm:pb-16 border-b border-grey">
     <div class="flex flex-col md:flex-row md:pr-16 2xl:pr-24 gap-y-8 px-4 gap-12 md:px-0">
       <div class="pb-2 w-full md:w-28 rounded-full rounded-tl-none h-12 md:h-16 flex items-center justify-center md:sticky top-0 bg-[#4866CC] grow-0 border">
         <h3 class="text-white text-center ">uxui</h3>
@@ -71,42 +70,6 @@
 </section>
 
 
-
-<section class="py-8 md:py-20 md:px-16 flex flex-col px-4 gap-8 md-gap-3 border-y border-grey 2xl:px-20">
-  <h3>Recognition</h3>
-
-  <div class="flex md:flex-row flex-col w-full gap-8 2xl:gap-12">
-    <div class="flex-grow flex flex-col gap-8 md:w-1/3">
-      <div class="flex justify-center items-center 2xl:p-16 rounded-xl h-60 bg-[#FFFFFF] overflow-hidden">
-        <img src="rgd.png" class="w-4/6 h-auto">
-      </div>
-      <div class="flex flex-col gap-4">
-        <p class="pb-2 border-b border-grey">RGD STUDENT AWARDS x2</p>
-        <h6 class="pb-4 border-b border-grey">[1] 1st Place, UX Design [2] Honourable Mention, Augmented Creativity</h6>  
-      </div>
-    </div>
-
-    <div class="flex-grow flex flex-col gap-8 md:w-1/3">
-      <div class="flex justify-center items-center 2xl:p-16 rounded-xl h-60 bg-[#FFFFFF] overflow-hidden ">
-        <img src="dubstech.png" class="w-4/6 h-auto">
-      </div>
-      <div class="flex flex-col gap-4">
-        <p class="pb-2 border-b border-grey">DUBSTECH</p>
-        <h6 class="pb-4 border-b border-grey">[3] 3rd Place, Gaming Track - UXD Spring Hackathon</h6>
-      </div>
-    </div>
-
-    <div class="flex-grow flex flex-col gap-8 md:w-1/3">
-      <div class="flex justify-center items-center 2xl:p-16 rounded-xl h-60 bg-[#FFFFFF] overflow-hidden ">
-        <img src="dsa.png" class="w-2/6 h-auto">
-      </div>
-      <div class="flex flex-col gap-4">
-        <p class="pb-2 border-b border-grey">DSA DESN'ATHON x2</p>
-      <h6 class="pb-4 border-b border-grey">[4] 2nd Place, Student Leadership [5] Sustainability</h6>
-      </div>
-    </div>
-  </div>
-</section>
 
 
 
