fixed gaps, spacing, responsiveness

--- a/src/hereafter.html
+++ b/src/hereafter.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
-  <title>Nina's Portfoilo</title>
+  <title>Here:after</title>
 </head>
 <body>
   <!-- Import the header component -->
@@ -27,9 +27,9 @@
 
   <!-- Header Component -->
   <header-component></header-component>
-  <div class="relative z-0 py-60 lg:pb-60 2xl:pb-[560px] pt-20 md:pt-32 flex flex-col gap-8 px-4 md:px-10 overflow-hidden">
+  <div class="relative z-0 py-60 lg:pb-60 2xl:pb-[560px] pt-20 md:pt-32 flex flex-col gap-8 px-4 md:px-10 overflow-hidden 2xl:px-20 2xl:pb-60 2xl:pt-40">
     <!-- Hero image with absolute positioning, behind the content -->
-    <img src="hereafter-hero.png" alt="Hero image" class="absolute z-0 top-6 left-0 w-full h-full object-cover">
+    <img src="hereafter-hero.png" alt="Hero image" class="absolute z-0 top-6 2xl:top-0 left-0 w-full h-full object-cover">
     
     <!-- Content section, placed above the hero image using z-10 -->
     <div class="relative z-10">
