--- a/src/index.html
+++ b/src/index.html
@@ -53,17 +53,17 @@
 
   <section class=" md:pt-16 sm:pb-16 border-b border-grey">
     <div class="flex flex-col md:flex-row md:pr-16 2xl:pr-24 gap-y-8 px-4 gap-12 md:px-0">
-      <div class="pb-2 w-full md:w-28 rounded-full rounded-tl-none h-12 md:h-16 flex items-center justify-center md:sticky top-0 bg-[#4866CC] grow-0 border">
-        <h3 class="text-white text-center ">uxui</h3>
+      <div class="pb-2 w-full md:w-28 rounded-full rounded-tl-none h-12 md:h-16 2xl:h-20 2xl:w-32 flex items-center justify-center md:sticky top-0 bg-[#4866CC] grow-0 border">
+        <h3 class="text-white text-center 2xl:text-[36px]">uxui</h3>
       </div>
-      <div class="grid grid-cols-none md:grid-cols-2 flex-1 gap-4 2xl:gap-12 cards-section"></div>
+      <div class="grid grid-cols-none md:grid-cols-2 flex-1 gap-4 2xl:gap-8 cards-section"></div>
     </div>
     
-    <div class="pb-8 flex flex-col md:flex-row md:pr-16 md:gap-y-8 px-4 gap-12 md:px-0 2xl:gap-12 2xl:pr-24">
-      <div class="pb-2 w-full md:w-28 rounded-full rounded-tl-none h-12 md:h-16 flex items-center justify-center md:sticky top-0 bg-[#13A368] grow-0">
-        <h3 class="text-white text-center">motion</h3>
+    <div class="pb-8 flex flex-col md:flex-row md:pr-16 md:gap-y-8 px-4 gap-12 md:px-0 2xl:gap-8 2xl:pr-24">
+      <div class="pb-2 w-full md:w-28 rounded-full rounded-tl-none h-12 md:h-16 2xl:h-20 2xl:w-32 flex items-center justify-center md:sticky top-0 bg-gree grow-0">
+        <h3 class="text-white text-center 2xl:text-[36px]">motion</h3>
       </div>
-      <div class="grid grid-cols-1 md:grid-cols-2 flex-1 gap-4 2xl:gap-12  cards-section3"></div>
+      <div class="grid grid-cols-1 md:grid-cols-2 flex-1 gap-4 2xl:gap-8 cards-section3"></div>
     </div>
    
 
