--- a/src/accessichat.html
+++ b/src/accessichat.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <link rel="icon" type="image/png" href="ladybug.png">
   <link rel="stylesheet" href="global.styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300..900&family=Syne:wght@400..800&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
-  <title>Nina's Portfoilo</title>
+  <title>Accessichat</title>
 </head>
 <body>
   <!-- Import the header component -->
@@ -25,9 +26,9 @@
 <!-- Content Section -->
 <main>
   
-  <div class="relative py-60 lg:pb-72 2xl:pb-[560px] pt-20 md:pt-32 flex flex-col gap-8 px-4 md:px-10 overflow-hidden">
+  <div class="relative py-60 lg:pb-72 2xl:pb-[560px] pt-20 md:pt-32 flex flex-col gap-8 px-4 md:px-10 overflow-hidden 2xl:px-20 2xl:pt-40 2xl:pb-60 2xl:pt-40">
     <!-- Image with adjusted positioning -->
-    <img src="accesi-hero.png" alt="Hero image" class="absolute top-12 lg:top-4 left-0 w-full h-full object-cover object-top">
+    <img src="accesi-hero.png" alt="Hero image" class="absolute top-12 lg:top-4 xl:top-0 left-0 w-full h-full object-cover object-top">
     
     <div class="relative z-10">
       <back-button link="index.html"></back-button>
