--- a/src/archive.html
+++ b/src/archive.html
@@ -56,7 +56,7 @@
         <div class="pb-2 w-full md:w-28 rounded-full rounded-tl-none h-12 md:h-16 flex items-center justify-center md:sticky top-0 bg-[#f30559] grow-0">
           <h3 class="text-white text-center">design</h3>
         </div>
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-4 flex-1 cards-section2"></div>
+        <div class="grid grid-cols-1 md:grid-cols-2 2xl:gap-8 flex-1 cards-section2"></div>
       </div>
       
 
