uh. don't ask how many changes i made. I basically changed everything and forgot to commit erm

--- a/src/hereafter.html
+++ b/src/hereafter.html
@@ -27,11 +27,13 @@
 
   <!-- Header Component -->
   <header-component></header-component>
-  <div class="relative z-0 py-60 lg:pb-60 2xl:pb-[560px] pt-20 md:pt-32 flex flex-col gap-8 px-4 md:px-10 overflow-hidden 2xl:px-20 2xl:pb-60 2xl:pt-40">
-    <!-- Hero image with absolute positioning, behind the content -->
-    <img src="hereafter-hero.png" alt="Hero image" class="absolute z-0 top-6 2xl:top-0 left-0 w-full h-full object-cover">
+
+
+
+  <div class="relative py-60 2xl:pb-[224px] pt-20 md:pt-32 flex flex-col gap-8 px-4 md:px-10 lg:px-20 overflow-hidden 2xl:px-20 lg:pt-40 lg:pb-60 2xl:pt-40">
+    <!-- Image with adjusted positioning -->
+    <img src="hereafter-hero.png" alt="Hero image" class="absolute z-0 top-0 2xl:top-0 left-0 w-full h-full object-cover">
     
-    <!-- Content section, placed above the hero image using z-10 -->
     <div class="relative z-10">
       <back-button link="index.html"></back-button>
     </div>
@@ -69,7 +71,7 @@
       </div>
       <div>
         <a href="https://www.figma.com/proto/QhcqwAACz6sgnow3txen1O/here%3Aafter?page-id=753%3A6059&node-id=754-6064&p=f&viewport=256%2C372%2C0.06&t=cJokFdqDjqyB7OPI-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=754%3A6064&show-proto-sidebar=1" target="_blank" class="flex flex-col lg:px-16 hover-image">
-          <button class="rounded-xl md:rounded-2xl px-4 pb-6 py-5 border-2 border-grey hover:bg-gray-950 hover:text-white hover:border-gray-950 transition flex justify-center items-baseline gap-4">
+          <button class="rounded-xl md:rounded-2xl px-4 pb-6 py-5  bg-bock text-white transition flex justify-center items-baseline gap-4">
             <p>
               <i class="fa-brands fa-figma"></i>
             </p>
@@ -323,16 +325,16 @@
 
 
 <section class="flex flex-col lg:flex-row py-8 md:py-12 md:pb-24 sm:px-10 gap-3 px-4 border-grey border-b">
-  <div class="flex flex-col lg:px-16 gap-10">
+  <div class="flex flex-col lg:px-16 gap-10 w-full">
     <div class="flex flex-col gap-4 pt-1">
-      <h4>
+      <h3>
         While addressing the problem, we created Shirley and Patrick.
-      </h4>
+      </h3>
     </div>
     <div class="grid grid-cols-1 md:grid-cols-2 gap-8 lg:p-12 pt-6">
       <!-- Poor Mental Health -->
-      <div class="border border-grey rounded text-left w-full overflow-hidden rounded-2xl">
-        <div class="p-4 bg-purple-200 border-b border-grey">
+      <div class="border border-grey rounded text-left w-full overflow-hidden rounded-3xl">
+        <div class="p-4 bg-purple-200 border-b border-grey0 border-b border-grey">
           <h4>Shirley (They/Them)</h4> 
         </div>
         <div class="p-4 flex gap-4">
@@ -344,11 +346,11 @@
             <h4 class="custom-list-item">Introvert</h4>
           </div>
           <!-- Image Section -->
-          <img src="Shirely.png" class="w-1/2 md:h-56 object-cover rounded-xl">
+          <img src="Shirely.png" class="w-1/2 md:h-56 2xl:h-80 object-cover rounded-2xl border border-grey">
         </div>
       </div>
       
-      <div class="border border-grey rounded text-left w-full overflow-hidden rounded-2xl">
+      <div class="border border-grey rounded text-left w-full overflow-hidden rounded-3xl">
         <div class="p-4 bg-red-200 border-b border-grey">
           <h4>Patrick (He/Him)</h4> 
         </div>
@@ -361,7 +363,7 @@
             <h4 class="custom-list-item">Extrovert</h4>
           </div>
           <!-- Image Section -->
-          <img src="Patrick.png" class="w-1/2 md:h-56 object-cover rounded-xl">
+          <img src="Patrick.png" class="w-1/2 md:h-56 object-cover rounded-2xl 2xl:h-80 border border-grey">
         </div>
       </div>
     </div>
@@ -373,7 +375,7 @@
   <section class="flex flex-col lg:flex-row py-8 md:py-12 md:pb-24 sm:px-10 justify-between px-4 border-grey border-b">
     <!-- Heading Section -->
     <div class="w-full lg:w-[30%] lg:px-16">
-      <h4 class="md:pt-[0.75rem]">Shirely</h4>
+      <h4 class="md:pt-[0.75rem]">Shirley</h4>
     </div>
     <!-- Content Section -->
     <div class="flex flex-col lg:px-16 gap-4 md:gap-10 lg:w-[70%]">
@@ -405,7 +407,7 @@
     <div class="image-container">
       <img src="hereafter-user1-journey.png" class="md:border border-grey md:border-t-0 w-full" alt="All Features">
       <div class="md:border-grey border-x sm:px-4">
-        <h6 class="py-3 px-4 sm:px-0">Fig 4. Shirely's Journey.</h6>
+        <h6 class="py-3 px-4 sm:px-0">Fig 4. Shirley's Journey.</h6>
       </div>
     </div>
   </section>
