--- a/src/about.html
+++ b/src/about.html
@@ -31,7 +31,7 @@
            class="rounded-3xl w-full h-1/2 sm:h-full lg:w-full lg:h-[524px] 2xl:h-[800px] object-cover object-center">
     </div>
     <!-- Left Content Section -->
-    <div class="flex flex-col gap-8 xl:gap-14 md:w-full">
+    <div class="flex flex-col gap-8 md:gap-12 xl:gap-14 md:w-full">
       <div>
         <h3 class="pb-4">Nice to meet you!</h3>
         <h4>
@@ -42,7 +42,7 @@
         </h4>
       </div>
       <a href="https://drive.google.com/file/d/15Vbiz09x6SVD2cTScr3ldKVGAPqeNlPY/view?usp=sharing" target="_blank" class="hover-image">
-        <button class="w-full rounded-2xl px-16 pb-6 py-5 border-2 border-grey  hover:bg-gray-950 hover:text-white hover:border-gray-950 transition m-full md:max-w-[600px] cursor-pointer">
+        <button class="w-full rounded-2xl px-16 pb-6 py-5  bg-violet-50 text-blob transition m-full md:max-w-[600px] cursor-pointer">
           <h4>Open Resume</h4>
         </button>
       </a>
@@ -58,7 +58,7 @@
   
     <div class="flex md:flex-row flex-col w-full gap-8 2xl:gap-12">
       <div class="flex-grow flex flex-col gap-8 md:w-1/3">
-        <div class="flex justify-center items-center 2xl:p-16 rounded-xl h-48 overflow-hidden border shadow-inner">
+        <div class="flex justify-center items-center 2xl:p-16 rounded-2xl h-48 overflow-hidden border shadow-inner">
           <img src="rgd.png" class="w-4/6 h-auto">
         </div>
         <div class="flex flex-col gap-4">
