--- a/src/accessichat.html
+++ b/src/accessichat.html
@@ -26,9 +26,9 @@
 <!-- Content Section -->
 <main>
   
-  <div class="relative py-60 lg:pb-72 2xl:pb-[560px] pt-20 md:pt-32 flex flex-col gap-8 px-4 md:px-10 overflow-hidden 2xl:px-20 2xl:pt-40 2xl:pb-60 2xl:pt-40">
+  <div class="relative py-60 2xl:pb-[224px] pt-20 md:pt-32 flex flex-col gap-8 px-4 md:px-10 lg:px-20 overflow-hidden 2xl:px-20 lg:pt-40">
     <!-- Image with adjusted positioning -->
-    <img src="accesi-hero.png" alt="Hero image" class="absolute top-12 lg:top-4 xl:top-0 left-0 w-full h-full object-cover object-top">
+    <img src="accesi-hero.png" alt="Hero image" class="absolute top-6 xl:top-0 left-0 w-full h-full object-cover object-top">
     
     <div class="relative z-10">
       <back-button link="index.html"></back-button>
@@ -71,7 +71,7 @@
       </div>
       <div>
         <a href="https://www.figma.com/proto/xzcrgVq1JayAV9BSRoBcbk/AccessiChat?page-id=165%3A917&node-id=235-5820&viewport=-1109%2C849%2C0.3&t=JzOe134Wgy3o8pQB-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=235%3A5820&show-proto-sidebar=1" target="_blank" class="flex flex-col lg:px-16 hover-image">
-          <button class="rounded-xl md:rounded-2xl px-4 pb-6 py-5 border-2 border-grey hover:bg-gray-950 hover:text-white hover:border-gray-950 transition flex justify-center items-baseline gap-4">
+          <button class="rounded-xl md:rounded-2xl px-4 pb-6 py-5  bg-bock text-white transition flex justify-center items-baseline gap-4">
             <p>
               <i class="fa-brands fa-figma"></i>
             </p>
