--- a/src/archive.html
+++ b/src/archive.html
@@ -53,7 +53,7 @@
 
 
       <div class="pb-8 flex flex-col md:flex-row md:pr-16 md:gap-y-8 px-4 gap-12 md:px-0 2xl:gap-12 2xl:pr-24 border-b border-grey">
-        <div class="pb-2 w-full md:w-28 rounded-full rounded-tl-none h-12 md:h-16 flex items-center justify-center md:sticky top-0 bg-[#f30559] grow-0">
+        <div class="pb-2 w-full md:w-28 rounded-full rounded-tl-none h-12 md:h-16 flex items-center justify-center md:sticky top-0 bg-[#FF096B] grow-0">
           <h3 class="text-white text-center">design</h3>
         </div>
         <div class="grid grid-cols-1 md:grid-cols-2 2xl:gap-8 flex-1 cards-section2"></div>
