--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
 
   <section class=" md:pt-16 sm:pb-16 border-b border-grey">
     <div class="flex flex-col md:flex-row md:pr-16 2xl:pr-24 gap-y-8 px-4 gap-12 md:px-0">
-      <div class="pb-2 w-full md:w-28 rounded-full rounded-tl-none h-12 md:h-16 2xl:h-20 2xl:w-32 flex items-center justify-center md:sticky top-0 bg-[#4866CC] grow-0 border">
+      <div class="pb-2 w-full md:w-28 rounded-full rounded-tl-none h-12 md:h-16 2xl:h-20 2xl:w-32 flex items-center justify-center md:sticky top-0 bg-blob grow-0 border">
         <h3 class="text-white text-center 2xl:text-[36px]">uxui</h3>
       </div>
       <div class="grid grid-cols-none md:grid-cols-2 flex-1 gap-4 2xl:gap-8 cards-section"></div>
