--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 </div>
 <div class="cursor-follower"></div>
 <section class="px-4 md:px-16 2xl:px-20 pb-8 lg:pb-24 sm:0">
-  <div class="flex flex-col md:flex-row w-full justify-between pt-24 md:pt-60 2xl:pt-64 justify-end md:items-end gap-3">
+  <div class="flex flex-col md:flex-row w-full justify-between pt-24 md:pt-48 2xl:pt-64 justify-end md:items-end gap-3">
 
     <!-- Text content -->
     <div class="flex flex-col flex-1 gap-6 md:gap-8">
@@ -47,21 +47,18 @@
 
 
 
-
-
-
-
   <section class=" md:pt-16 sm:pb-16 border-b border-grey">
-    <div class="flex flex-col md:flex-row md:pr-16 2xl:pr-24 gap-y-8 px-4 gap-12 md:px-0">
-      <div class="pb-2 w-full md:w-28 rounded-full rounded-tl-none h-12 md:h-16 2xl:h-20 2xl:w-32 flex items-center justify-center md:sticky top-0 bg-blob grow-0 border">
+    
+    <div class="flex flex-col lg:flex-row md:px-16 2xl:pr-24 gap-y-8 px-4 gap-12 md:px-0 lg:pl-0">
+      <div class="pb-2 w-full lg:w-28 rounded-full rounded-tl-none h-12 md:h-16 2xl:h-20 2xl:w-32 flex items-center justify-center lg:sticky top-0 bg-blob grow-0 border">
         <h3 class="text-white text-center 2xl:text-[36px]">uxui</h3>
       </div>
       <div class="grid grid-cols-none md:grid-cols-2 flex-1 gap-4 2xl:gap-8 cards-section"></div>
     </div>
     
-    <div class="pb-8 flex flex-col md:flex-row md:pr-16 md:gap-y-8 px-4 gap-12 md:px-0 2xl:gap-8 2xl:pr-24">
-      <div class="pb-2 w-full md:w-28 rounded-full rounded-tl-none h-12 md:h-16 2xl:h-20 2xl:w-32 flex items-center justify-center md:sticky top-0 bg-gree grow-0">
-        <h3 class="text-white text-center 2xl:text-[36px]">motion</h3>
+    <div class="flex flex-col lg:flex-row md:px-16 2xl:pr-24 gap-y-8 px-4 gap-12 md:px-0 lg:pl-0">
+      <div class="pb-2 w-full lg:w-28 rounded-full rounded-tl-none h-12 md:h-16 2xl:h-20 2xl:w-32 flex items-center justify-center lg:sticky top-0 bg-gree grow-0">
+        <h3 class="text-white text-center 2xl:text-[36px]">web</h3>
       </div>
       <div class="grid grid-cols-1 md:grid-cols-2 flex-1 gap-4 2xl:gap-8 cards-section3"></div>
     </div>
@@ -81,14 +78,14 @@
         <div class="w-full">
 
           <a href="https://drive.google.com/file/d/15Vbiz09x6SVD2cTScr3ldKVGAPqeNlPY/view?usp=sharing" target="_blank">
-            <div class="border-b border-grey p-4 pr-3 py-8 md:pr-12 flex items-center justify-between hover:text-blob duration-500 cursor-pointer hover-image">
+            <div class="border-b p-4 pr-3 py-8 md:pr-12 flex items-center justify-between hover:text-blob duration-500 cursor-pointer hover-image">
               <h6>Resume</h6>
               <span class="material-symbols-outlined text-xl"><h2 class="font-thin">trending_flat</h2></span>
             </div>
           </a>
 
           <a href="about.html">
-            <div class="border-b border-grey p-4 pr-3 py-8 md:pr-12 flex items-center justify-between hover:text-blob duration-500 cursor-pointer hover-image">
+            <div class="border-b p-4 pr-3 py-8 md:pr-12 flex items-center justify-between hover:text-blob duration-500 cursor-pointer hover-image">
               <h6>About</h6>
               <span class="material-symbols-outlined text-xl"><h2 class="font-thin">trending_flat</h2></span>
               <span class="cursor-text">About me</span>
