changed the nav bar

--- a/src/about.html
+++ b/src/about.html
@@ -33,7 +33,7 @@
     <!-- Left Content Section -->
     <div class="flex flex-col gap-8 md:gap-12 xl:gap-14 md:w-full">
       <div>
-        <h3 class="pb-4">Nice to meet you!</h3>
+        <h3 class="pb-4">Thanks for stopping by!</h3>
         <h4>
           I’m Nina Le (She/Her), a uxui designer and third-year design student at York University's Honours Bachelor of Design program. 
           Whether I am working on uxui or experimental projects, I love diving into new challenges and designing thoughtful experiences.
