bug fixes to header

--- a/src/about.html
+++ b/src/about.html
@@ -23,7 +23,7 @@
 </div>
 <div class="cursor-follower"></div>
 
-  <section class="flex flex-col md:flex-row py-8 md:py-20 px-4 md:px-16 gap-8 md:gap-16 items-center pt-20 md:pt-36 lg:pt-48">
+  <section class="flex flex-col md:flex-row py-8 md:py-20 px-4 md:px-16 gap-8 md:gap-16 items-center pt-20 md:pt-36">
     <!-- Right Image Section -->
     <div class="flex-auto w-full">
       <img src="profile.png" 
