--- a/src/about.html
+++ b/src/about.html
@@ -42,7 +42,7 @@
         </h4>
       </div>
       <a href="https://drive.google.com/file/d/15Vbiz09x6SVD2cTScr3ldKVGAPqeNlPY/view?usp=sharing" target="_blank" class="hover-image">
-        <button class="w-full rounded-2xl px-16 pb-6 py-5  bg-violet-50 text-blob transition m-full md:max-w-[600px] cursor-pointer">
+        <button class="w-full rounded-2xl px-16 pb-6 py-5  bg-violet-50 text-blob hover:text-white hover:bg-pig transition m-full md:max-w-[600px] cursor-pointer">
           <h4>Open Resume</h4>
         </button>
       </a>
@@ -168,14 +168,14 @@
     <div class="w-full">
 
       <a href="https://drive.google.com/file/d/15Vbiz09x6SVD2cTScr3ldKVGAPqeNlPY/view?usp=sharing" target="_blank">
-        <div class="border-b border-grey p-4 pr-3 py-8 md:pr-12 flex items-center justify-between hover:text-blob duration-500 cursor-pointer hover-image">
+        <div class="border-b border-grey p-4 pr-3 py-8 md:pr-12 flex items-center justify-between hover:text-indigo-700 duration-500 cursor-pointer hover-image">
           <h6>Resume</h6>
           <span class="material-symbols-outlined text-xl"><h2 class="font-thin">trending_flat</h2></span>
         </div>
       </a>
 
       <a href="index.html">
-        <div class="border-b border-grey p-4 pr-3 py-8 md:pr-12 flex items-center justify-between hover:text-blob duration-500 cursor-pointer hover-image">
+        <div class="border-b border-grey p-4 pr-3 py-8 md:pr-12 flex items-center justify-between hover:text-indigo-700 duration-500 cursor-pointer hover-image">
           <h6>Projects</h6>
           <span class="material-symbols-outlined text-xl"><h2 class="font-thin">trending_flat</h2></span>
           <span class="cursor-text">About me</span>
@@ -185,7 +185,7 @@
       <!-- Add the hover-image class to other elements as well -->
 
       <a href="archive.html">
-        <div class="p-4 pr-3 py-8 md:pr-12 flex items-center justify-between hover:text-blob duration-500 cursor-pointer hover-image">
+        <div class="p-4 pr-3 py-8 md:pr-12 flex items-center justify-between hover:text-indigo-700 duration-500 cursor-pointer hover-image">
           <h6>Archive</h6>
           <span class="material-symbols-outlined text-xl"><h2 class="font-thin">trending_flat</h2></span>
         </div>
