--- a/src/index.html
+++ b/src/index.html
@@ -47,14 +47,13 @@
 
 
 
-  <section class=" md:pt-16 sm:pb-16 border-b border-grey">
-    <div class="flex flex-col lg:flex-row md:px-16 2xl:pr-24 gap-y-8 px-4 gap-12 md:px-0 ">
+  <section class=" md:pt-16 border-b border-grey">
+    <div class="flex flex-col lg:flex-row md:px-16 2xl:pr-24 gap-y-8 px-4 gap-12 md:px-0">
       <div class="pb-2 w-full lg:w-28 rounded-full rounded-tl-none h-12 md:h-16 2xl:h-20 2xl:w-32 flex items-center justify-center lg:sticky lg:top-[120px] bg-blob grow-0 border"> <!-- Adjusted top here -->
         <h3 class="text-white text-center 2xl:text-[36px]">uxui</h3>
       </div>
       <div class="grid grid-cols-none md:grid-cols-2 flex-1 gap-4 2xl:gap-8 cards-section"></div>
     </div>
-    
     <div class="flex flex-col lg:flex-row md:px-16 2xl:pr-24 gap-y-8 px-4 gap-12 md:px-0 ">
       <div class="pb-2 w-full lg:w-28 rounded-full rounded-tl-none h-12 md:h-16 2xl:h-20 2xl:w-32 flex items-center justify-center lg:sticky lg:top-[120px] bg-gree grow-0"> <!-- Adjusted top here -->
         <h3 class="text-white text-center 2xl:text-[36px]">web</h3>
@@ -78,14 +77,14 @@
         <div class="w-full">
 
           <a href="https://drive.google.com/file/d/15Vbiz09x6SVD2cTScr3ldKVGAPqeNlPY/view?usp=sharing" target="_blank">
-            <div class="border-b p-4 pr-3 py-8 md:pr-12 flex items-center justify-between hover:text-blob duration-500 cursor-pointer hover-image">
+            <div class="border-b p-4 pr-3 py-8 md:pr-12 flex items-center justify-between hover:text-indigo-700 duration-500 cursor-pointer hover-image">
               <h6>Resume</h6>
               <span class="material-symbols-outlined text-xl"><h2 class="font-thin">trending_flat</h2></span>
             </div>
           </a>
 
           <a href="about.html">
-            <div class="border-b p-4 pr-3 py-8 md:pr-12 flex items-center justify-between hover:text-blob duration-500 cursor-pointer hover-image">
+            <div class="border-b p-4 pr-3 py-8 md:pr-12 flex items-center justify-between hover:text-indigo-700 duration-500 cursor-pointer hover-image">
               <h6>About</h6>
               <span class="material-symbols-outlined text-xl"><h2 class="font-thin">trending_flat</h2></span>
               <span class="cursor-text">About me</span>
@@ -95,7 +94,7 @@
           <!-- Add the hover-image class to other elements as well -->
 
           <a href="archive.html">
-            <div class="p-4 pr-3 py-8 md:pr-12 flex items-center justify-between hover:text-blob duration-500 cursor-pointer hover-image">
+            <div class="p-4 pr-3 py-8 md:pr-12 flex items-center justify-between hover:text-indigo-700 duration-500 cursor-pointer hover-image">
               <h6>Archive</h6>
               <span class="material-symbols-outlined text-xl"><h2 class="font-thin">trending_flat</h2></span>
             </div>
