this isn't good practice LOL but many changes err - fixed the responsiveness again and colours, logos and music icon

--- a/src/archive.html
+++ b/src/archive.html
@@ -53,7 +53,7 @@
 
     
       
-      <div class="flex flex-col lg:flex-row md:px-16 2xl:pr-24 gap-y-8 px-4 gap-12 md:px-0 border-b border-grey">
+      <div class="flex flex-col lg:flex-row md:px-10 2xl:px-16 gap-y-8 px-4 gap-12 md:px-0 border-b border-grey">
         <div class="pb-2 w-full lg:w-28 rounded-full rounded-tl-none h-12 md:h-16 2xl:h-20 2xl:w-32 flex items-center justify-center lg:sticky lg:top-[120px] bg-pig grow-0"> <!-- Adjusted top here -->
           <h3 class="text-white text-center 2xl:text-[36px]">design</h3>
         </div>
