--- a/src/index.html
+++ b/src/index.html
@@ -27,16 +27,16 @@
   <div class="flex flex-col md:flex-row w-full justify-between pt-24 md:pt-48 2xl:pt-64 justify-end md:items-end gap-3">
 
     <!-- Text content -->
-    <div class="flex flex-col flex-1 gap-6 md:gap-8">
-      <h5 class="font-light text-[60px] md:text-[72px]">Hi, I'm Nina</h5>
-      <h4 class="smolwidth">As a UX/UI designer, I look for ways to make things just right while aligning design with real-world needs</h4>
-      <h6 class="smolwidth">* When I'm not designing, I'm inspired by music, fashion, and the world around me „• ֊ •„</h6>
+    <div class="flex flex-col flex-1 gap-8 md:gap-8">
+      <h5 class="font-normal text-[60px] 2xl:text-[72px]">Hi, I'm <span">Nina</span></h5>
+      <h4 class="smolwidth">As a uxui designer, I look for ways to make things just right while aligning design with real-world needs.</h4>
+      <h6 class="smolwidth">When I'm not designing, I'm inspired by music, fashion, and the world around me <span class="text-pig">„</span>• ֊ •<span class="text-pig">„</span></h6>
     </div>
     <div class="flex justify-center mb-6 md:mb-0">
       <a href="about.html">
         <img 
           src="musi.png" 
-          class="hover-image md:h-36 lg:h-48 xl:h-56 w-auto" 
+          class="hover-image md:h-36 lg:h-48 xl:h-56 2xl:h-68 2xl:pr-4 w-auto" 
           alt="Music Icon"
         >
       </a>
@@ -48,13 +48,13 @@
 
 
   <section class=" md:pt-16 border-b border-grey">
-    <div class="flex flex-col lg:flex-row md:px-16 2xl:pr-24 gap-y-8 px-4 gap-12 md:px-0">
+    <div class="flex flex-col lg:flex-row md:px-10 2xl:px-16 gap-y-8 px-4 gap-12 md:px-0">
       <div class="pb-2 w-full lg:w-28 rounded-full rounded-tl-none h-12 md:h-16 2xl:h-20 2xl:w-32 flex items-center justify-center lg:sticky lg:top-[120px] bg-blob grow-0 border"> <!-- Adjusted top here -->
         <h3 class="text-white text-center 2xl:text-[36px]">uxui</h3>
       </div>
       <div class="grid grid-cols-none md:grid-cols-2 flex-1 gap-4 2xl:gap-8 cards-section"></div>
     </div>
-    <div class="flex flex-col lg:flex-row md:px-16 2xl:pr-24 gap-y-8 px-4 gap-12 md:px-0 ">
+    <div class="flex flex-col lg:flex-row md:px-10 2xl:px-16 gap-y-8 px-4 gap-12 md:px-0 ">
       <div class="pb-2 w-full lg:w-28 rounded-full rounded-tl-none h-12 md:h-16 2xl:h-20 2xl:w-32 flex items-center justify-center lg:sticky lg:top-[120px] bg-gree grow-0"> <!-- Adjusted top here -->
         <h3 class="text-white text-center 2xl:text-[36px]">web</h3>
       </div>
