--- a/src/accessichat.html
+++ b/src/accessichat.html
@@ -23,13 +23,12 @@
   <div class="cursor-follower"></div>
   <script type="module" src="back-button.js"></script>
 
-<!-- Content Section -->
 <main>
   
-  <div class="relative h-[60vh] md:h-[80vh] flex flex-col gap-8 px-4 md:px-10 overflow-hidden 2xl:px-20">
+  <div class="relative h-[60vh] md:h-[80vh] flex flex-col gap-8 px-4 md:px-10 overflow-hidden 2xl:px-16">
     <img src="accesi-hero.png" alt="Hero image" class="absolute top-8 md:top-0 left-0 w-full h-full object-cover object-top">
     
-    <div class="relative z-10 pt-24 md:pt-32">
+    <div class="relative z-10 pt-20 md:pt-32">
       <back-button link="index.html"></back-button>
     </div>
 </div>
@@ -67,19 +66,16 @@
           <h6>Farwa Babar & Adrianna Estrada</h6>
         </div>
       </div>
-      <div>
+      <div class="mt-[-48px] sm:mt-0">
         <a href="https://www.figma.com/proto/xzcrgVq1JayAV9BSRoBcbk/AccessiChat?page-id=165%3A917&node-id=235-5820&viewport=-1109%2C849%2C0.3&t=JzOe134Wgy3o8pQB-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=235%3A5820&show-proto-sidebar=1" target="_blank" class="flex flex-col lg:px-16 hover-image">
-          <button class="rounded-xl md:rounded-2xl px-4 pb-6 py-5 bg-light text-bock hover:text-white hover:bg-bock transition flex justify-center items-baseline gap-4">
+          <button class="rounded-xl md:rounded-2xl px-4 pb-6 py-5 2xl:py-8 bg-stone-100 hover:text-white hover:bg-bock transition flex justify-center items-baseline gap-4">
             <p>
               <i class="fa-brands fa-figma"></i>
             </p>
             <h4>Try the Figma Link</h4>
           </button>
         </a>
-        </div>
-    <!-- Card Grouping for Information -->
- 
-    
+        </div> 
   </section>
 
   <section class="image-display-section w-full md:px-12 lg:px-24  border-grey border-b">
