--- a/src/hereafter.html
+++ b/src/hereafter.html
@@ -30,15 +30,13 @@
 
 
 
-  <div class="relative py-60 2xl:pb-[224px] pt-20 md:pt-32 flex flex-col gap-8 px-4 md:px-10 overflow-hidden 2xl:px-20 lg:pt-40 lg:pb-60 2xl:pt-40">
-    <!-- Image with adjusted positioning -->
-    <img src="hereafter-hero.png" alt="Hero image" class="absolute z-0 top-0 2xl:top-0 left-0 w-full h-full object-cover">
-    
-    <div class="relative z-10">
+  
+  <div class="relative h-[60vh] md:h-[72vh] flex flex-col gap-8 px-4 md:px-10 overflow-hidden 2xl:px-16">
+    <img src="hereafter-hero.png" alt="Hero image" class="absolute top-8 md:top-0 left-0 w-full h-full object-cover">
+    <div class="relative z-10 pt-20 md:pt-32">
       <back-button link="index.html"></back-button>
     </div>
-  </div>
-  
+</div>
 
 
       
@@ -69,9 +67,9 @@
           <h6>Jersey Stuart, Rita Zhan, Shriya Mujumdar</h6>
         </div>
       </div>
-      <div>
+      <div class="mt-[-48px] sm:mt-0">
         <a href="https://www.figma.com/proto/QhcqwAACz6sgnow3txen1O/here%3Aafter?page-id=753%3A6059&node-id=754-6064&p=f&viewport=256%2C372%2C0.06&t=cJokFdqDjqyB7OPI-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=754%3A6064&show-proto-sidebar=1" target="_blank" class="flex flex-col lg:px-16 hover-image">
-          <button class="rounded-xl md:rounded-2xl px-4 pb-6 py-5   bg-light text-bock hover:text-white hover:bg-bock transition flex justify-center items-baseline gap-4">
+          <button class="rounded-xl md:rounded-2xl px-4 pb-6 py-5 2xl:py-8  bg-stone-100 hover:text-white hover:bg-bock transition flex justify-center items-baseline gap-4">
             <p>
               <i class="fa-brands fa-figma"></i>
             </p>
