fixed up music note sizes and text "smolwidth"

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
       <a href="about.html">
         <img 
           src="musi.png" 
-          class="hover-image md:h-36 lg:h-48 xl:h-56 2xl:h-68 2xl:pr-4 w-auto" 
+          class="hover-image md:h-36 lg:h-48 xl:h-56 2xl:h-[252px] 2xl:pr-4 w-auto" 
           alt="Music Icon"
         >
       </a>
