--- a/src/about.html
+++ b/src/about.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+      <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-E6RS5N28XQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-E6RS5N28XQ');
+</script>
         <meta charset="UTF-8" />
         <link rel="icon" type="image/png" href="ladybug.png">
         <link rel="stylesheet" href="global.styles.css">
