a few portfoilo updates and added p5js sketch... having a hard time making it work in this editor.

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <title>Nina's Portfoilo</title>
-  </head>
+<link href="https://fonts.googleapis.com/css2?family=Doto:wght@400;700&display=swap" rel="stylesheet">
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/addons/p5.sound.min.js"></script>
+    </head>
 
 
 
@@ -56,21 +60,24 @@
 
   <section class=" md:pt-16 border-b border-grey">
     <div class="flex flex-col lg:flex-row md:px-10 2xl:px-16 gap-y-8 px-4 gap-12 md:px-0">
-      <div class="pb-2 w-full lg:w-28 rounded-full rounded-tl-none h-12 md:h-16 2xl:h-20 2xl:w-32 flex items-center justify-center lg:sticky lg:top-[120px] bg-blob grow-0 border"> <!-- Adjusted top here -->
-        <h3 class="text-white text-center 2xl:text-[36px]">uxui</h3>
-      </div>
+      <!--   <div class="pb-2 w-full lg:w-28 rounded-full rounded-tl-none h-12 md:h-16 2xl:h-20 2xl:w-32 flex items-center 
+          <h3 class="text-white text-center 2xl:text-[36px]">uxui</h3>
+      </div> 
+      justify-center lg:sticky lg:top-[120px] bg-blob grow-0 border"> Adjusted top here -->
+
+
+    
       <div class="grid grid-cols-none md:grid-cols-2 flex-1 gap-4 2xl:gap-8 cards-section"></div>
     </div>
-    <div class="flex flex-col lg:flex-row md:px-10 2xl:px-16 gap-y-8 px-4 gap-12 md:px-0 ">
-      <div class="pb-2 w-full lg:w-28 rounded-full rounded-tl-none h-12 md:h-16 2xl:h-20 2xl:w-32 flex items-center justify-center lg:sticky lg:top-[120px] bg-gree grow-0"> <!-- Adjusted top here -->
-        <h3 class="text-white text-center 2xl:text-[36px]">web</h3>
-      </div>
-      <div class="grid grid-cols-1 md:grid-cols-2 flex-1 gap-4 2xl:gap-8 cards-section3"></div>
-    </div>
-    
+
    
 
 </section>
+
+<script src="sketch.js"></script>
+
+
+
 
 
 
