changed many thangs, like that muscial section, header and about description and cursor. wow. i am so cool.

--- a/src/about.html
+++ b/src/about.html
@@ -48,17 +48,22 @@
     <!-- Left Content Section -->
     <div class="flex flex-col gap-8 md:gap-12 xl:gap-14 md:w-full">
       <div>
-        <h3 class="pb-4">Thanks for stopping by!</h3>
-        <h4>
-          I’m Nina Le (She/Her), a uxui designer and third-year design student at York University's Honours Bachelor of
-          Design program.
-          Whether I am working on uxui or experimental projects, I love diving into new challenges and designing
-          thoughtful experiences.
-          Before design, I spent years honing my skills in drawing and singing. Both illustration and choir required
-          rhythm and a sense of flow, which taught me the importance of seamless execution, aka “pixel-perfect
-          execution,” and in enjoying the process :)
+        <h3 class="pb-4">I am a uxui designer who codes, and occasionally sings.
+</h3>
+        <p>
+      Hi, I am Nina (she/her), a fourth year design student at York University.
 
-        </h4>
+
+          I was always on the creative part of the internet. I spent my early childhood watching digital speedpaints, which taught me how to draw. The best speedpaints were always the ones with nightcore or nu metal music, which was (probably) what got me into singing. I eventually pciked up on how to code.
+          <br>
+          As a ux/ui designer, I now bring a multidisciplinary approach that combines aesthetic sensibility
+          with functional precision. My background in both design
+          and development allows me to create experiences that are not only visually
+          compelling but technically sound. 
+
+         
+
+        </p>
       </div>
       <a href="https://drive.google.com/file/d/15Vbiz09x6SVD2cTScr3ldKVGAPqeNlPY/view?usp=sharing" target="_blank"
         class="hover-image">
