--- a/src/about.html
+++ b/src/about.html
@@ -54,7 +54,7 @@
       Hi, I am Nina (she/her), a fourth year design student at York University.
 
 
-          I was always on the creative part of the internet. I spent my early childhood watching digital speedpaints, which taught me how to draw. The best speedpaints were always the ones with nightcore or nu metal music, which was (probably) what got me into singing. I eventually pciked up on how to code.
+          I was always on the creative part of the internet. I spent my early childhood watching digital speedpaints, which taught me how to draw. The best speedpaints were always the ones with nightcore or nu metal music, which was (probably) what got me into singing. I eventually picked up on how to code.
           <br>
           As a ux/ui designer, I now bring a multidisciplinary approach that combines aesthetic sensibility
           with functional precision. My background in both design
