updated the blacks

--- a/src/index.html
+++ b/src/index.html
@@ -78,7 +78,7 @@
 </section>
 </div>
 
-        <div class="justify-center bg-[black] w-[100%] pt-16 space-y-4">
+        <div class="justify-center bg-[#1B191B] w-[100%] pt-16 space-y-4">
             <h6 class="text-center text-white">DESIGNING HARMONY, ONE PIXEL AT A TIME</h6>
             <p class=" text-center text-grey">
 Play a song that holds a special place in my heart <span class="text-pig">„</span><span class="text-white">• ֊ •</span><span class="text-pig">„</span></h6>
