--- a/src/index.html
+++ b/src/index.html
@@ -61,16 +61,16 @@
       </div>
   </section>
 
-  <section class="md:pt-16 border-b border-grey projects-with-grid">
+  <section class="md:pt-16 projects-with-grid">
     <div class="grid-lines"></div>
     <div class="grid-crosshair left"></div>
     <div class="grid-crosshair right"></div>
 
-    <div class=" items-center px-4 md:px-16 2xl:px-20 gap-y-8 gap-12">
+    <div class=" items-center px-4 md:px-24 2xl:px-20 gap-y-8 gap-12">
           <!-- <h6 class="text-center py-8">FEATURED WORK</h6> -->
 
       <!--   <div class="pb-2 w-full lg:w-28 rounded-full rounded-tl-none h-12 md:h-16 2xl:h-20 2xl:w-32 flex items-center 
-          <h3 class="text-white t\\\\\\ext-center 2xl:text-[36px]">uxui</h3>
+          <h3 class="text-white text-center 2xl:text-[36px]">uxui</h3>
       </div> 
       justify-center lg:sticky lg:top-[120px] bg-blob grow-0 border"> Adjusted top here -->
       <div class="flex flex-col lg:flex-row grid grid-cols-none md:grid-cols-2 flex-1 gap-4 2xl:gap-8 cards-section"></div>
