fixed spacing issues

--- a/src/index.html
+++ b/src/index.html
@@ -40,10 +40,9 @@
     <div class="grid-crosshair left"></div>
     <div class="grid-crosshair right"></div>
 
-    <div class="flex flex-col items-center justify-center w-full relative pt-24 md:pt-40 2xl:pt-34 ">
+    <div class="flex flex-col items-center justify-center w-full relative pt-24 md:pt-28 2xl:pt-32">
           <div id="ascii-music-container" class=" z-10 bg-white bg-blend-multiply"></div>
       </div>
-
 
 
     <div class="flex flex-col items-center md:flex-row w-full justify-center gap-8">
@@ -60,7 +59,7 @@
       </div>
   </section>
 
-  <section class="md:pt-16 projects-with-grid">
+  <section class="md:pt-32 projects-with-grid pb-8 lg:pb-24">
     <div class="grid-lines"></div>
     <div class="grid-crosshair left"></div>
     <div class="grid-crosshair right"></div>
@@ -77,11 +76,10 @@
 </section>
 </div>
 
-        <div class="justify-center bg-[#1B191B] w-[100%] pt-16 space-y-4">
-            <h6 class="text-center text-white">DESIGNING HARMONY, ONE PIXEL AT A TIME</h6>
-            <p class=" text-center text-grey">
+        <div class="justify-center bg-[#1B191B] w-[100%] pt-16 space-y-4 px-24">
+            <h3 class=" text-white">Designing harmony, one pixel at a time.</h3>
+            <h6 class=" text-grey">
 Play a song that holds a special place in my heart</h6>
-            </p>
         </div>
 
 
