--- a/src/index.html
+++ b/src/index.html
@@ -40,8 +40,8 @@
     <div class="grid-crosshair left"></div>
     <div class="grid-crosshair right"></div>
 
-    <div class="flex flex-col items-center justify-center w-full relative pt-24 md:pt-28 2xl:pt-32">
-          <div id="ascii-music-container" class=" z-10 bg-white bg-blend-multiply"></div>
+    <div class="flex flex-col items-center justify-center w-full relative">
+          <div id="ascii-music-container" class=" z-0 mix-blend-multiply"></div>
       </div>
 
 
@@ -65,7 +65,7 @@
     <div class="grid-crosshair right"></div>
 
     <div class=" items-center px-4 md:px-24 2xl:px-20 gap-y-8 gap-12">
-          <!-- <h6 class="text-center py-8">FEATURED WORK</h6> -->
+          <!-- <h3 class="font-normal py-8">Featured Work</h3> -->
 
       <!--   <div class="pb-2 w-full lg:w-28 rounded-full rounded-tl-none h-12 md:h-16 2xl:h-20 2xl:w-32 flex items-center 
           <h3 class="text-white text-center 2xl:text-[36px]">uxui</h3>
