updated colours and the musical image

--- a/src/index.html
+++ b/src/index.html
@@ -49,13 +49,12 @@
       <div class="flex flex-col items-center flex-1 gap-8 md:gap-4">
 
           <div class="max-w-3xl mx-auto space-y-6 ">
-              <h2 class="font-normal text-center">Hey I am Nina, a uxui designer.</h2>
+              <h2 class=" text-center">Hey I am Nina, a uxui designer.</h2>
               <p class="smolwidth text-center text-grey">
                   /* As a vocalist who can also code, my strengths are on focusing on the technical and fine-tuning harmonous experiences */
               </p>
           </div>
       </div>
-
       </div>
   </section>
 
@@ -89,7 +88,6 @@ Play a song that holds a special place in my heart</h6>
     <div id="sketch-container" class="w-full overflow-hidden"></div>
   </section>
 
- <!-- <p class=" text-center text-grey"> © 2026, Coded and designed by me  </p> -->
 
 
 <script type="module" src="main.js"></script>
